# fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.yml  pyproject.toml  run_scheduler.py
ai/: 1.md
docs/: api.md
src/python_cli_starter/: charts.py  cli.py  crud.py  data_fetcher.py  logger_config.py  main.py  models.py  scheduler.py  schemas.py  services.py
src/python_cli_starter/strategies/: __init__.py  bollinger_bands_strategy.py  dual_confirmation_strategy.py  macd_strategy.py  moving_average_cross_strategy.py  rsi_strategy.py
tests/: conftest.py  test_api.py  test_scheduler.py
